# data-archive-ml-synthesizer

./: .gitignore  README.md  config.yaml  flake.nix  main.py  pyproject.toml
data/input/: dmdSec.json  file.json  structMap.json
scripts/: run_smoke_test.sh
src/data_archive_ml_synthesizer/: __init__.py  loader.py  metadata_builder.py  model.py  pipeline.py  reassembler.py  sampler.py  test_mvp.py  validator.py
tests/: README.md  conftest.py  smoke_test.py
