[project]
name = "data-archive-ml-synthesizer"
version = "0.1.0"
description = "A tool for synthesizing METS XML documents using machine learning"
readme = "README.md"
requires-python = "=3.12.9"
license = { text = "MIT" }
authors = [
  { name = "Project Contributors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.22.0",
  "sdv>=1.0.0",
  "pyyaml>=6.0",
  "lxml>=4.9.0",
  "xmlschema>=2.0.0",
  "tqdm>=4.64.0"
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "ipython"
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py smoke_test.py"

[project.urls]
Homepage = "https://github.com/yourusername/data-archive-ml-synthesizer"
