[project]
name = "data-archive-ml-synthesizer"
version = "0.1.0"
description = "A tool for synthesizing METS XML documents using machine learning"
readme = "README.md"
requires-python = "=3.12.9"
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.22.0",
  "sdv>=1.0.0",
  "pyyaml>=6.0",
  "lxml>=4.9.0",
  "xmlschema>=2.0.0",
  "tqdm>=4.64.0"
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "ipython",
  "pytest"
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py *_test.py"
python_functions = "test_*"
addopts = "-v"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[project.urls]
Homepage = "https://github.com/eth-library/data-archive-ml-synthesizer"
